Fix spacing of contact form on mobile

--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -1851,7 +1851,9 @@ html {
     padding: 5px; }
     @media screen and (max-width: 500px) {
       .contact-me input, .contact-me textarea {
-        width: 100%; } }
+        width: 100%;
+        margin: 5px 0 15px;
+        padding: 0 10px; } }
   .contact-me label {
     display: inline-block;
     width: 20%;
@@ -1861,7 +1863,8 @@ html {
     @media screen and (max-width: 500px) {
       .contact-me label {
         text-align: left;
-        margin-bottom: 0;
+        margin: 5px 0;
+        padding: 0 10px;
         width: 100%; } }
   .contact-me button {
     display: block;
