--- a/stylesheets/_contact.scss
+++ b/stylesheets/_contact.scss
@@ -93,6 +93,8 @@
 
     @include media($mobile) {
       width: 100%;
+      margin: 5px 0 15px;
+      padding: 0 10px;
     }
   }
 
@@ -105,7 +107,8 @@
 
     @include media($mobile) {
       text-align: left;
-      margin-bottom: 0;
+      margin: 5px 0;
+      padding: 0 10px;
       width: 100%;
     }
   }
